--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -1,7 +1,7 @@
 <wm-page layouttype="one-column" columns="1" data-ng-controller="LoginPageController" name="page1" pagetitle="Login">
     <wm-content name="content1" height="100%">
         <wm-page-content columnwidth="12" name="column1" padding="0px" class="login">
-            <wm-container class="bg-primary" width="100%" height="100%" backgroundimage="resources/images/imagelists/login-bg.png" backgroundrepeat="no-repeat" backgroundposition="0 0" backgroundsize="100% 100%" backgroundattachment="fixed" name="loginPageContainer">
+            <wm-container class="cl" width="100%" height="100%" backgroundimage="resources/images/imagelists/login-bg.png" backgroundrepeat="no-repeat" backgroundposition="0 0" backgroundsize="100% 100%" backgroundattachment="fixed" name="loginPageContainer">
                 <wm-layoutgrid name="loginGrid" height="100%">
                     <wm-gridrow name="gridrow7" height="15%">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn10_2"></wm-gridcolumn>
