New files added - [] Files modified - [UserCreation.js,cx2_published_dataModel.json,FormTypesServiceImpl.java,ManageMunicipalities.variables.json,States.java,DataEntry.html,MunicipalityUsers.variables.json,MunicipalityUsers.html,UsersController.java,StatesServiceImpl.java,UserCreation.html,MunicipalityUsers.js,ManageMunicipalities.html,servicedef.xml,StatesController.java,StatesService.java,Municipalities.java,MunicipalitiesServiceImpl.java,UsersServiceImpl.java,db-connection-settings.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/DataEntry/DataEntry.html
+++ b/src/main/webapp/pages/DataEntry/DataEntry.html
@@ -439,6 +439,7 @@
                         </wm-liveform>
                     </wm-livegrid>
                 </wm-tabpane>
+                <wm-tabpane name="tabpane9"></wm-tabpane>
             </wm-tabs>
         </wm-page-content>
     </wm-content>
