--- a/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
+++ b/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
@@ -23,11 +23,11 @@
                                 <wm-grid-column binding="address1" caption="Address1" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="address2" caption="Address2" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="city" caption="City" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                <wm-grid-column binding="state" caption="State" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                <wm-grid-column binding="states.stateName" caption="State Name" type="string" generator="assigned" show="true" related-entity-name="States" readonly="undefined"></wm-grid-column>
                                 <wm-grid-column binding="postalCode" caption="Postal Code" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="phone" caption="Phone" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="email" caption="Email" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                 <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                 <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
                                 <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
@@ -36,76 +36,65 @@
                                 <wm-layoutgrid columns="2" name="layoutgrid1">
                                     <wm-gridrow name="gridrow1">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn1">
-                                            <wm-form-field name="municipalityName" displayname="Municipality Name" required="false" show="true" generator="assigned" primary-key="false" key="municipalityName" type="string" is-related="false" maxchars="255"
-                                            pc-display="true" mobile-display="true" widget="text"></wm-form-field>
+                                            <wm-form-field name="municipalityName" displayname="Municipality Name" show="true" primary-key="false" generator="assigned" key="municipalityName" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn2">
-                                            <wm-form-field name="municipalityGuid" displayname="Municipality Guid" required="false" show="true" generator="assigned" primary-key="false" key="municipalityGuid" type="string" is-related="false" maxchars="255"
-                                            pc-display="true" mobile-display="true" widget="text"></wm-form-field>
+                                            <wm-form-field name="municipalityGuid" displayname="Municipality Guid" show="true" primary-key="false" generator="assigned" key="municipalityGuid" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow2">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn3">
-                                            <wm-form-field name="address1" displayname="Address1" required="false" show="true" generator="assigned" primary-key="false" key="address1" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                                            widget="text"></wm-form-field>
+                                            <wm-form-field name="address1" displayname="Address1" show="true" primary-key="false" generator="assigned" key="address1" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn4">
-                                            <wm-form-field name="address2" displayname="Address2" required="false" show="true" generator="assigned" primary-key="false" key="address2" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                                            widget="text"></wm-form-field>
+                                            <wm-form-field name="address2" displayname="Address2" show="true" primary-key="false" generator="assigned" key="address2" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow3">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn5">
-                                            <wm-form-field name="city" displayname="City" required="false" show="true" generator="assigned" primary-key="false" key="city" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                                            widget="text"></wm-form-field>
+                                            <wm-form-field name="city" displayname="City" show="true" primary-key="false" generator="assigned" key="city" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn6">
-                                            <wm-form-field name="state" displayname="State" required="false" show="true" generator="assigned" primary-key="false" key="state" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                                            widget="text"></wm-form-field>
+                                            <wm-form-field name="states" displayname="States" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" widget="autocomplete" displayexpression="stateName" searchkey="stateName"
+                                            displaylabel="stateName" placeholder="Search"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow4">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn7">
-                                            <wm-form-field name="postalCode" displayname="Postal Code" required="false" show="true" generator="assigned" primary-key="false" key="postalCode" type="string" is-related="false" maxchars="255" pc-display="true"
-                                            mobile-display="true" widget="text"></wm-form-field>
+                                            <wm-form-field name="postalCode" displayname="Postal Code" show="true" primary-key="false" generator="assigned" key="postalCode" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn8">
-                                            <wm-form-field name="phone" displayname="Phone" required="false" show="true" generator="assigned" primary-key="false" key="phone" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                                            widget="text"></wm-form-field>
+                                            <wm-form-field name="phone" displayname="Phone" show="true" primary-key="false" generator="assigned" key="phone" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow5">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn9">
-                                            <wm-form-field name="email" displayname="Email" required="false" show="true" generator="assigned" primary-key="false" key="email" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                                            widget="text"></wm-form-field>
+                                            <wm-form-field name="email" displayname="Email" show="true" primary-key="false" generator="assigned" key="email" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn10">
-                                            <wm-form-field name="allowManualPayment" displayname="Allow Manual Payment" required="false" show="true" generator="assigned" primary-key="false" key="allowManualPayment" type="boolean" is-related="false" pc-display="true"
-                                            mobile-display="true" widget="checkbox"></wm-form-field>
+                                            <wm-form-field name="allowManualPayment" displayname="Allow Manual Payment" show="true" primary-key="false" generator="assigned" key="allowManualPayment" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow6">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn11">
-                                            <wm-form-field name="manualPaymentPercent" displayname="Manual Payment Percent" required="false" show="true" generator="assigned" primary-key="false" key="manualPaymentPercent" type="integer" is-related="false"
-                                            step="0" pc-display="true" mobile-display="true" widget="number"></wm-form-field>
+                                            <wm-form-field name="manualPaymentPercent" displayname="Manual Payment Percent" show="true" primary-key="false" generator="assigned" key="manualPaymentPercent" type="integer" step="0" widget="number" inputtype="number"
+                                            placeholder="Enter value"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn12">
-                                            <wm-form-field name="active" displayname="Active" required="false" show="true" generator="assigned" primary-key="false" key="active" type="boolean" is-related="false" pc-display="true" mobile-display="true" widget="checkbox"></wm-form-field>
+                                            <wm-form-field name="active" displayname="Active" show="true" primary-key="false" generator="assigned" key="active" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow7">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn13">
-                                            <wm-form-field name="globalEmailSig" displayname="Global Email Sig" required="false" show="true" generator="assigned" primary-key="false" key="globalEmailSig" type="string" is-related="false" maxchars="255" pc-display="true"
-                                            mobile-display="true" widget="text"></wm-form-field>
+                                            <wm-form-field name="globalEmailSig" displayname="Global Email Sig" show="true" primary-key="false" generator="assigned" key="globalEmailSig" type="string" widget="textarea" maxchars="255" placeholder="Enter value"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn14">
-                                            <wm-form-field name="logo" displayname="Logo" required="false" show="true" generator="assigned" primary-key="false" key="logo" type="blob" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                                            widget="upload"></wm-form-field>
+                                            <wm-form-field name="logo" displayname="Logo" show="true" primary-key="false" generator="assigned" key="logo" type="blob" widget="upload" maxchars="255" permitted="undefined" href="services/cx2/Municipalities/1/content/logo?0.7113844364404731"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                 </wm-layoutgrid>
-                                <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
-                                <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
+                                <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
+                                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                             </wm-liveform>
                         </wm-livegrid>
                     </wm-gridcolumn>
