New files added - [] Files modified - [MunicipalityUsers.variables.json,MunicipalityUsers.html,MunicipalityUsers.js] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -25,7 +25,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3">
-                        <wm-grid title="Usersubscriptions List" dataset="bind:Variables.Cx2UserSubscriptionsData.dataSet" navigation="Classic" name="grid2">
+                        <wm-grid title="Usersubscriptions List" dataset="bind:Variables.Cx2UserSubscriptionsData.dataSet" navigation="Classic" name="grid2" on-click="Widgets.dialog1.open()">
                             <wm-grid-column binding="id" caption="Id" generator="identity" pcdisplay="true" mobiledisplay="true" type="integer" primary-key="true" readonly="true"></wm-grid-column>
                             <wm-grid-column binding="dateSubscribed" caption="Date Subscribed" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
                             <wm-grid-column binding="municipalities.municipalityGuid" caption="Municipality Guid" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="Municipalities" readonly="true"></wm-grid-column>
@@ -46,4 +46,67 @@
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
+    <wm-view class="dialog-view" name="view1">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="User" iconclass="wi wi-user" name="dialog1">
+            <wm-dialogactions name="dialogactions1">
+                <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button1"></wm-button>
+            </wm-dialogactions>
+            <wm-layoutgrid name="layoutgrid4">
+                <wm-gridrow name="gridrow6">
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn10"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="8" name="gridcolumn11" horizontalalign="center">
+                        <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Users/&quot;+Variables.SelectedUser.dataSet.data[$i].id+&quot;/content/photo&quot;" shape="circle" width="100pt" height="100pt"></wm-picture>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn14"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow7">
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn12"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="8" name="gridcolumn15" horizontalalign="center">
+                        <wm-label padding="unset 0.5em" name="label8" fontweight="bold" fontsize="20" caption="bind:Variables.SelectedUser.dataSet.data[$i].firstName+&quot; &quot;+Variables.SelectedUser.dataSet.data[$i].lastName"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn13"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow8">
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn16"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="8" name="gridcolumn17" horizontalalign="center">
+                        <wm-label padding="unset 0.5em" name="label9" caption="bind:Variables.SelectedUser.dataSet.data[$i].email"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn18"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow9">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn19" padding="1em unset">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" name="label10" fontweight="bold" width="100%" caption="Address1"></wm-label>
+                        <wm-label padding="unset 0.5em" name="label11" caption="bind:Variables.SelectedUser.dataSet.data[$i].address1"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn20"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn21" padding="1em unset">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" name="label12" caption="Address2"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Variables.SelectedUser.dataSet.data[$i].address2" name="label13"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow10">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn22" padding="unset unset 1em unset">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="City" name="label14"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Variables.SelectedUser.dataSet.data[$i].city" name="label15"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn23"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn24" padding="unset unset 1em unset">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="State" name="label16"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Variables.SelectedUser.dataSet.data[$i].city" name="label19"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow11">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn25" padding="unset unset 1em unset">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="PostalCode" name="label18"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Variables.SelectedUser.dataSet.data[$i].postalCode" name="label20"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn26"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn27" padding="unset unset 1em unset">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="PhoneNumber" name="label17"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Variables.SelectedUser.dataSet.data[$i].phoneNumber" name="label21"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+        </wm-dialog>
+    </wm-view>
 </wm-page>
